--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Effective JavaScript: Frogger</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 
-
 </head>
 <body>
-    <h1> 🎮👾 Classic Arcade Game Clone 👾🎮 </h1>
-        <h1 id="text">Level : <span id="level">1</span></h1>
-         <button onclick="myFunction()" class="btn-info">Game Rules</button>
-        <div id="myDIV">
+  <h1> 🎮👾 Classic Arcade Game Clone 👾🎮 </h1>
+      <h1 id="text">Level : <span id="level">1</span></h1>
+       <button onclick="myFunction()" class="btn-info">Game Rules</button>
+      <div id="myDIV">
 <h3>Play the game</h3>
 
 Use the arrow keys to move the player up, down, left, and right respectively. The goal of the game is to move to the highest level which is the fifth without any collision with the enemy.
@@ -28,21 +29,21 @@ Complete each level by reaching the water without any collision with the enemy a
 
 In case of a collision between you and the enemy, the game will end and it will be reset automatically so you can play again.</div>
 
-    <br>
+  <br>
 
     <script src="js/resources.js"></script>
     <script src="js/engine.js"></script>
 
 
     <br>
-
+<div class="btn">
   <button class="btn-up"><i class=' fas fa-arrow-up' style='font-size:36px'></i></button><br><br>
   <button class="btn-left"><i class='fas fa-arrow-left' style='font-size:36px'></i></button>
 
   <button class="btn-right" ><i class='fas fa-arrow-right' style='font-size:36px'></i></button><br><br>
   <button class="btn-down" ><i class='fas fa-arrow-down' style='font-size:36px'></i></button>
   <script src="js/app.js"></script>
-
+</div>
             <dialog id="pop-up">
            <h1> Congratulations You Win 🎈🥳</h1>
           
