--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-wid<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+th, initial-scale=1">
 
     <title>Effective JavaScript: Frogger</title>
     <link rel="stylesheet" href="css/style.css">
