--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-wid<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-th, initial-scale=1">
+ <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+
 
     <title>Effective JavaScript: Frogger</title>
     <link rel="stylesheet" href="css/style.css">
