--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <meta name="viewport" content="target-densitydpi=device-dpi, initial-scale=1.0, user-scalable=no" />
+<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport"/>
 
 
     <title>Effective JavaScript: Frogger</title>
@@ -11,6 +11,8 @@
 
 </head>
 <body>
+     
+
   <h1> 🎮👾 Classic Arcade Game Clone 👾🎮 </h1>
       <h1 id="text">Level : <span id="level">1</span></h1>
        <button onclick="myFunction()" class="btn-info">Game Rules</button>
