--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@ In case of a collision between you and the enemy, the game will end and it will 
 
     <br>
 <div class="btn">
-  <button class="btn-up"><i class='	fas fa-arrow-up' ></i></button><br><br>
+  <button class="btn-up"><i class='	fas fa-arrow-up' ></i></button>
   <button class="btn-left"><i class='fas fa-arrow-left' ></i></button>
 
-  <button class="btn-right" ><i class='fas fa-arrow-right'></i></button><br><br>
+  <button class="btn-right" ><i class='fas fa-arrow-right'></i></button>
   <button class="btn-down" ><i class='fas fa-arrow-down'></i></button>
   <script src="js/app.js"></script>
 </div>
