--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-	<h1> 🎮👾 Classic Arcade Game Clone 👾🎮 </h1>
+	<h1> 🎮👾 Nad's Classic Arcade Game Clone 👾🎮 </h1>
 	    <h1 id="text">Level : <span id="level">1</span></h1>
 	     <button onclick="myFunction()" class="btn-info">Game Rules</button>
 	    <div id="myDIV">
